# Kicker_Robot_CRFC

./: .gitignore  LICENSE  README.md
KickerController/: CMakeLists.txt  Doxyfile
KickerController/include/: .clang-format  all_includes.h  changeable_values.h  edge_dector.h  font.h  menu_handler.h  menus.h  pinout.h  ps4.h  ssd1306.h
KickerController/include/drivers/: ps4.h  ssd1306.h
KickerController/include/setup/: esp_now_callback_setup.h  esp_now_setup.h  i2c_setup.h
KickerController/include/supporting/: changeable_values.h  edge_dector.h  font.h  menu_handler.h  menus.h
KickerController/include/tasks/: display_task.h  ps4_data_processor_task.h  ps4_task.h  send_data_task.h
KickerController/main/: .clang-format  CMakeLists.txt  edge_dector.cpp  font.cpp  idf_component.yml  main.cpp  menu_handler.cpp  menus.cpp  ps4.cpp  ssd1306.cpp
KickerController/main/drivers/: ps4.cpp  ssd1306.cpp
KickerController/main/setup/: esp_now_callback_setup.cpp  esp_now_setup.cpp  i2c_setup.cpp
KickerController/main/supporting/: edge_dector.cpp  font.cpp  menu_handler.cpp  menus.cpp
KickerController/main/tasks/: display_task.cpp  ps4_data_processor_task.cpp  ps4_task.cpp  send_data_task.cpp
KickerRobot/: CMakeLists.txt  Doxyfile
KickerRobot/include/: all_includes.h  pinout.h
KickerRobot/include/drivers/: led_strip_driver.h  oDrive.h  servo.h  (+1 more)
KickerRobot/main/: CMakeLists.txt  main.cpp
KickerRobot/main/drivers/: led_strip_driver.cpp  oDrive.cpp  servo.cpp  ssd1306.cpp
KickerRobot/main/setup/: esp_now_callback_setup.cpp  esp_now_setup.cpp  i2c_setup.cpp  led_strip_setup.cpp
KickerRobot/main/supporting/: font.cpp  kicker_drive_train.cpp  menus.cpp
KickerRobot/main/tasks/: display_driver_task.cpp  esp_now_task.cpp  kicker_drive_train_task.cpp  odrive_driver_task.cpp  servo_driver_task.cpp
(+1929 files in other folders)
