idf_component_register(SRCS "./drivers/ps4.cpp" "./drivers/ssd1306.cpp"
                            "./supporting/edge_dector.cpp" "./supporting/font.cpp" "./supporting/menu_handler.cpp" "./supporting/menus.cpp"
                            "main.cpp"
                            INCLUDE_DIRS "." "./drivers" "./setup" "./supporting")